--- a/arch/arm/boot/dts/am335x-boneblack.dts
+++ b/arch/arm/boot/dts/am335x-boneblack.dts
@@ -63,113 +63,119 @@
 			compatible = "adi,ad5940";
 			reg = <1>;
 			spi-max-frequency = <10000000>;
-			vref-supply = <&adc_vref>;
-			interrupt-parent = <&gpio0>;
-			interrupts = <27 IRQ_TYPE_EDGE_FALLING 22 IRQ_TYPE_EDGE_FALLING>;
-			interrupt-names = "INT1", "INT2";
 
-			adi,interrupt-io = <0 4>;
-			adi,interrupt-sources = <0 0>;
+			ad5940-adc {
+				compatible = "adi,ad5940-adc";
+				status = "okay";
 
-			#address-cells = <1>;
-			#size-cells = <0>;
+				vref-supply = <&adc_vref>;
+				interrupt-parent = <&gpio0>;
+				interrupts = <27 IRQ_TYPE_EDGE_FALLING 22 IRQ_TYPE_EDGE_FALLING>;
+				interrupt-names = "INT1", "INT2";
 
-			channel@0 {
-				reg = <0>;
-				diff-channels = <AD5940_ADC_INPUTP_VCE0
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "Vce-Vbias";
-			};
+				adi,interrupt-io = <0 4>;
+				adi,interrupt-sources = <0 0>;
 
-			channel@1 {
-				reg = <1>;
-				diff-channels = <AD5940_ADC_INPUTP_VRE0
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "Vre-Vbias";
-			};
+				#address-cells = <1>;
+				#size-cells = <0>;
 
-			channel@2 {
-				reg = <2>;
-				diff-channels = <AD5940_ADC_INPUTP_SE0
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "Vse-Vbias";
-			};
+				channel@0 {
+					reg = <0>;
+					diff-channels = <AD5940_ADC_INPUTP_VCE0
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "Vce-Vbias";
+				};
 
-			channel@3 {
-				reg = <3>;
-				diff-channels = <AD5940_ADC_INPUTP_DE0
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "Vde-Vbias";
-			};
+				channel@1 {
+					reg = <1>;
+					diff-channels = <AD5940_ADC_INPUTP_VRE0
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "Vre-Vbias";
+				};
 
-			channel@4 {
-				reg = <4>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN0
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain0-Vbias";
-			};
+				channel@2 {
+					reg = <2>;
+					diff-channels = <AD5940_ADC_INPUTP_SE0
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "Vse-Vbias";
+				};
 
-			channel@5 {
-				reg = <5>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN1
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain1-Vbias";
-			};
+				channel@3 {
+					reg = <3>;
+					diff-channels = <AD5940_ADC_INPUTP_DE0
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "Vde-Vbias";
+				};
 
-			channel@6 {
-				reg = <6>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN2
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain2-Vbias";
-			};
+				channel@4 {
+					reg = <4>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN0
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain0-Vbias";
+				};
 
-			channel@7 {
-				reg = <7>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN3
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain3-Vbias";
-			};
+				channel@5 {
+					reg = <5>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN1
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain1-Vbias";
+				};
 
-			channel@8 {
-				reg = <8>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN4
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain4-Vbias";
-			};
+				channel@6 {
+					reg = <6>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN2
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain2-Vbias";
+				};
 
-			channel@9 {
-				reg = <9>;
-				diff-channels = <AD5940_ADC_INPUTP_AIN6
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "ain6-Vbias";
-			};
+				channel@7 {
+					reg = <7>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN3
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain3-Vbias";
+				};
 
-			channel@10 {
-				reg = <10>;
-				diff-channels = <AD5940_ADC_INPUTP_LPTIA_LP
-						AD5940_ADC_INPUTN_LPTIA>;
-				channel-name = "Low power TIA DC";
-			};
+				channel@8 {
+					reg = <8>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN4
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain4-Vbias";
+				};
 
-			channel@11 {
-				reg = <11>;
-				diff-channels = <AD5940_ADC_INPUTP_LPTIA
-						AD5940_ADC_INPUTN_LPTIA>;
-				channel-name = "Low power TIA AC";
-			};
+				channel@9 {
+					reg = <9>;
+					diff-channels = <AD5940_ADC_INPUTP_AIN6
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "ain6-Vbias";
+				};
 
-			channel@12 {
-				reg = <12>;
-				diff-channels = <AD5940_ADC_INPUTP_HSTIA
-						AD5940_ADC_INPUTN_HSTIA>;
-				channel-name = "High Speed TIA";
-			};
+				channel@10 {
+					reg = <10>;
+					diff-channels = <AD5940_ADC_INPUTP_LPTIA_LP
+							AD5940_ADC_INPUTN_LPTIA>;
+					channel-name = "Low power TIA DC";
+				};
 
-			channel@13 {
-				reg = <13>;
-				diff-channels = <AD5940_ADC_INPUTP_TEMP
-						AD5940_ADC_INPUTN_VBIAS0>;
-				channel-name = "Temperature";
+				channel@11 {
+					reg = <11>;
+					diff-channels = <AD5940_ADC_INPUTP_LPTIA
+							AD5940_ADC_INPUTN_LPTIA>;
+					channel-name = "Low power TIA AC";
+				};
+
+				channel@12 {
+					reg = <12>;
+					diff-channels = <AD5940_ADC_INPUTP_HSTIA
+							AD5940_ADC_INPUTN_HSTIA>;
+					channel-name = "High Speed TIA";
+				};
+
+				channel@13 {
+					reg = <13>;
+					diff-channels = <AD5940_ADC_INPUTP_TEMP
+							AD5940_ADC_INPUTN_VBIAS0>;
+					channel-name = "Temperature";
+				};
 			};
 		};
 	};
