--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -89,6 +89,13 @@ config MFD_AS3722
 	  controllers, 11 LDOs, RTC, automatic battery, temperature and
 	  over current monitoring, GPIOs, ADC and a watchdog.
 
+config AFE_AD5940
+	bool "Analog Devices AD5940 Analog Front End"
+	depends on SPI=y
+	help
+	  Say yes here to add support for Analog Devices AD5940 AFE(Analog
+	  Front End).
+
 config PMIC_ADP5520
 	bool "Analog Devices ADP5520/01 MFD PMIC Core Support"
 	depends on I2C=y
