--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -31,6 +31,14 @@ config DEBUG_PINCTRL
 	help
 	  Say Y here to add some extra checks and diagnostics to PINCTRL calls.
 
+config PINCTRL_AD5940
+	bool "Analog Devices AD5940 pinctrl support"
+	depends on AFE_AD5940
+	select PINMUX
+	select PINCONF
+	help
+	  Turn on pinctrl support for Analog Devices AD5940.
+
 config PINCTRL_ARTPEC6
 	bool "Axis ARTPEC-6 pin controller driver"
 	depends on MACH_ARTPEC6
