--- a/drivers/iio/dac/Kconfig
+++ b/drivers/iio/dac/Kconfig
@@ -209,6 +209,13 @@ config AD5791
 	  To compile this driver as a module, choose M here: the
 	  module will be called ad5791.
 
+config AD5940_DAC
+	bool "Analog Devices AD5940 DAC driver"
+	depends on AFE_AD5940
+	help
+	  Say yes here to build support for Analog Devices AD5940 High Resolution
+	  Voltage Output Digital to Analog Converter.
+
 config AD7303
 	tristate "Analog Devices AD7303 DAC driver"
 	depends on SPI
